--- a/stadiaclearlywhite.css
+++ b/stadiaclearlywhite.css
@@ -61,7 +61,7 @@ do so via my paypal: https://paypal.me/mrmcpowned
   height: 136px;
   position: absolute;
   left: 149px;
-  top: -139px;
+  top: -136px;
 }
 .custom .trigger {
   /* These are the actual triggers themselves */
@@ -86,13 +86,13 @@ placement */
 .custom .bumpers {
   position: absolute;
   width: 674px;
-  height: 49px;
+  height: 53px;
   left: 138px;
 }
 
 .custom .bumper {
   width: 140px;
-  height: 49px;
+  height: 53px;
   /* background: url( stadiawhite/bumpers.png); */
 }
 
@@ -159,8 +159,8 @@ start and select buttons. */
 /* Setting the size and CSS sprite for the start adn select buttons */
 .custom .back,
 .custom .start {
-  width: 50px;
-  height: 27px;
+  width: 49px;
+  height: 26px;
 }
 .custom .back.pressed,
 .custom .start.pressed {
@@ -190,26 +190,26 @@ start and select buttons. */
   height: 53px;
 }
 .custom .button.pressed {
- background-position-y: 14px;
+ background-position-y: 5px;
   margin-top: 5px; 
 }
 .custom .a {
   background: url( stadiawhite/A.png);
-  top: 110px;
-  left: 57px;
+  top: 109px;
+  left: 27px;
 }
 .custom .b {
   background: url( stadiawhite/B.png);
-  top: 57px;
+  top: 56px;
   right: 0px;
 }
 .custom .x {
   background: url( stadiawhite/X.png);
-  top: 55px;
+  top: 54px;
 }
 .custom .y {
   background: url( stadiawhite/Y.png);
-  left: 58px;
+  left: 27px;
 }
 /* Analog sticks follow the same principles as the triggers in terms of positioning
 Note that the rotation of the sticks in hard coded with javascript, so it applies 
@@ -240,15 +240,15 @@ the CSS inline. */
 }
 .custom .stick.right {
   background: url( stadiawhite/Stick%20Right.png);
-  top: calc(100% - 98px);
-  left: calc(100% - 105px);
+  top: calc(100% - 105px);
+  left: calc(100% - 98px);
 }
-/* Dpad possitioning and sizing */
+/* Dpad possitioning and sizing 
 .custom .dpad {
   position: absolute;
   width: 118px;
   height: 140px;
-  left: 134px;
+  left: 133px;
   top: 68px;
 }
 /*
@@ -309,8 +309,8 @@ all 8 positions, and change it according to the inputs. The classes
 themselves are fairly self explanatory. */
 .fstick {
   position: absolute;
-  width: 118px;
-  height: 140px;
+  width: 139px;
+  height: 118px;
   left: 134px;
   top: 68px;
   background: url( stadiawhite/dpad.png);
